--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://pickwings.join.com/jobs/472542-full-stack-engineer'>Job @ Pickwings (Z?rich): Full-Stack-Engineer | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ofsyafw9&__jvst=Employee+Referral&__jvsd=swYPygwC&__jvsc=Twitter&bid=nZheqMwb'>ServiceNow Careers - Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-31</p>
@@ -66,7 +70,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://viatec.silkstart.com/jobs/senior-web-developer'>
+<h5><a href='https://viatec.silkstart.com/jobs/senior-web-developer'>
     Victoria Innovation, Advanced Technology &amp; Entrepreneurship Council 
     
     | Senior Full-Stack JavaScript Developer
@@ -88,11 +92,11 @@
 <p><span class="badge badge-light">Prague, Czech Republic  Prague, Czech Republic</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ok9Wafwj&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nqpYpMwt'>Freedom Financial Network Careers - Full Stack Developer (Platform)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ok9Wafwj&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nqpYpMwt'>Freedom Financial Network Careers - Full Stack Developer (Platform)</a></h5> 
 <p><span class="badge badge-light">San Mateo, California  Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://getaway.join.com/jobs/474002-lead-full-stack-engineer'>Job @ GETAWAY (Berlin): Lead Full Stack Engineer | JOIN</a></h5> 
+<h5><a href='https://getaway.join.com/jobs/474002-lead-full-stack-engineer'>Job @ GETAWAY (Berlin): Lead Full Stack Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -132,7 +136,7 @@
 <p><span class="badge badge-light">San Mateo, California  Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698569272-stage-developpeur-fullstack-f-h'>Groupe CANAL+ STAGE - D?veloppeur Fullstack - F/H | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698569272-stage-developpeur-fullstack-f-h'>Groupe CANAL+ STAGE - D?veloppeur Fullstack - F/H | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -204,7 +208,7 @@
 <p><span class="badge badge-light">Chennai, India  Berkeley</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verticalscale.join.com/jobs/471529-full-stack-developer-internship-f-m-d'>Job @ Vertical  Scale  (Berlin): Full-Stack Develo... | JOIN</a></h5> 
+<h5><a href='https://verticalscale.join.com/jobs/471529-full-stack-developer-internship-f-m-d'>Job @ Vertical  Scale  (Berlin): Full-Stack Develo... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -302,11 +306,11 @@
 <p><span class="badge badge-light">Menlo Park, CAUnited States  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://touchbistro.applytojob.com/apply/HS4PTooaxY/Full-Stack-Development-Support-Intern'>Full Stack Development Support Intern - TouchBistro - Career Page</a></h5> 
+<h5><a href='http://touchbistro.applytojob.com/apply/HS4PTooaxY/Full-Stack-Development-Support-Intern'>Full Stack Development Support Intern - TouchBistro - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://touchbistro.applytojob.com/apply/GApJd27W61/Senior-Full-Stack-Developer-Internal-Systems'>Senior Full Stack Developer, Internal Systems - TouchBistro - Career Page</a></h5> 
+<h5><a href='http://touchbistro.applytojob.com/apply/GApJd27W61/Senior-Full-Stack-Developer-Internal-Systems'>Senior Full Stack Developer, Internal Systems - TouchBistro - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -318,7 +322,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qE1aVfwu&k=Job&j=olvS9fwB&__jvst=Employee&__jvsd=sntZTgwt&__jvsc=Twitter&bid=neJNoMwp'>WW International (formerly Weight Watchers) Careers - Full Stack Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qE1aVfwu&k=Job&j=olvS9fwB&__jvst=Employee&__jvsd=sntZTgwt&__jvsc=Twitter&bid=neJNoMwp'>WW International (formerly Weight Watchers) Careers - Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -338,7 +342,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crateio.recruitee.com/o/fullstack-engineer'>
+<h5><a href='https://crateio.recruitee.com/o/fullstack-engineer'>
       Fullstack Engineer - Crate.io Inc.
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -434,7 +438,7 @@
 <p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://proximity.applytojob.com/apply/U258VicMLL/Senior-Full-Stack-Developer'>Senior Full Stack Developer - ProximityCR - Career Page</a></h5> 
+<h5><a href='http://proximity.applytojob.com/apply/U258VicMLL/Senior-Full-Stack-Developer'>Senior Full Stack Developer - ProximityCR - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -448,15 +452,11 @@
 <p><span class="badge badge-light">Curitiba Brazil</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/465997-full-stack-developer-m-f-d'>Job @ NEUGELB Studios (Berlin): Full-Stack Develop... | JOIN</a></h5> 
+<h5><a href='https://neugelb.join.com/jobs/465997-full-stack-developer-m-f-d'>Job @ NEUGELB Studios (Berlin): Full-Stack Develop... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/SMARTWAVE/743999689314189-consultant-full-stack-senior'>SMARTWAVE Consultant Full stack Senior | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SMARTWAVE/743999689314627-consultant-full-stack-junior'>SMARTWAVE Consultant Full stack Junior | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
