--- a/web-developer.html
+++ b/web-developer.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/TalentGenGlobalUSA/743999698621592-web-design-developer-intern-virtual-great-reference-portfolio-building'>TalentGen Global, USA Web Design/Developer, Intern (virtual) GREAT reference portfolio building | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='http://medthink.applytojob.com/apply/vb7MDDUZ1m/Junior-Web-Developer'>Junior Web Developer - MedThink - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
@@ -74,7 +78,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/olFnbfwi'>Automation Anywhere Careers - Sr. Web Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/automationanywhere/job/olFnbfwi'>Automation Anywhere Careers - Sr. Web Developer</a></h5> 
 <p><span class="badge badge-light">Washington, DC  Boston, Massachusetts  New York, New York  Reston, Virginia  Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -130,11 +134,11 @@
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.cv-library.co.uk/job/211106559/JavaScript-Full-Stack-Web-Developer?s=100340&utm_source=dlvr.it&utm_medium=twitter'>JavaScript Full Stack Web Developer | CV-Library.co.uk | 211106559</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211106559/JavaScript-Full-Stack-Web-Developer?s=100340&utm_source=dlvr.it&utm_medium=twitter'>JavaScript Full Stack Web Developer | CV-Library.co.uk | 211106559</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://artisantalent.com/jobs/chicago/senior-technology-architect-salesforce/46173?utm_content=104483032&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artisantalent.com/jobs/chicago/senior-technology-architect-salesforce/46173?utm_content=104483032&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -249,7 +253,7 @@
 <p><span class="badge badge-light">United States United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHW9Vfwr&k=Job&j=obw1afwC&__jvst=Employee&__jvsd=sFWIogws&__jvsc=Twitter&bid=nWrunMwv'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHW9Vfwr&k=Job&j=obw1afwC&__jvst=Employee&__jvsd=sFWIogws&__jvsc=Twitter&bid=nWrunMwv'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -351,7 +355,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Lisbon, Portugal  Lisbon</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.s1jobs.com/job/education-teaching/educational-research-education-teaching/glasgow/747625923.html'>FOCUS Point Web Resource Development Officer (Part-Time, 0.8 FTE) (256374) | Education / Teaching Jobs | s1jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.s1jobs.com/job/education-teaching/educational-research-education-teaching/glasgow/747625923.html'>FOCUS Point Web Resource Development Officer (Part-Time, 0.8 FTE) (256374) | Education / Teaching Jobs | s1jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -371,7 +375,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/silver-peak/job/o3w1afwu'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/silver-peak/job/o3w1afwu'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -451,10 +455,6 @@ Develop process requirements and implement product development and release
       PHP Web Developer (f/m/d), for Rechhero - Applift
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pickar.join.com/jobs/461911-intern-as-web-developer'>Job @ pickar (Remote): Intern as Web Developer | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
 
